--- a/scss/index.css
+++ b/scss/index.css
@@ -32,12 +32,21 @@ body {
   overflow-x: hidden;
 }
 
-a::-moz-selection {
-  background-color: transparent;
+::-moz-selection {
+  background-color: red;
 }
 
-a::selection {
-  background-color: transparent;
+::selection {
+  background-color: red;
+}
+
+input,
+textarea,
+button,
+select,
+label,
+a {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .typed-cursor {
